Fix dark mode striped tables

--- a/static/style.css
+++ b/static/style.css
@@ -602,8 +602,8 @@
 [data-theme=dark] .sticky-header {
   background-color: #222;
 }
-[data-theme=dark] .table-striped > tbody > tr:nth-of-type(2n+1) {
-  color: #ddd;
+[data-theme=dark] .table-striped > tbody > tr:nth-of-type(2n+1) > * {
+	color: #c4c4c4 !important;
 }
 [data-theme=dark] .fixed-table-loading {
   color: #ddd !important;
